tests/cases/smoke/valid/func_type_annotation.dp
var formatter: (name: str) -> str
func greet(name: str) -> str = "Hi " + name
formatter = greet
