tests/cases/smoke/invalid/func_wrong_arg_type.dp
func add(a: int, b: int) -> int = a + b
var bad = add("1", 2)
